style.css
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body, html{
    height:100%;
    font-family: sans-serif;
    font-weight:400;
    line-height:1.8rem;
    color:#fff;
    background-color: #000;
  }

main{
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url("images/main-bg.jpg");
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    min-height: 100vh;    
    max-width: 100vw;
    color: #fff;
    background-attachment: fixed;
}

.main-text{
    letter-spacing: .5rem;
    padding: 3.5rem 2.8rem;
    background-color: rgba(17, 17, 17, 0.85);
}

#tag-line{
    text-align: center;
    font-family: verdana;
    letter-spacing: .3rem;
    font-size: .9rem;
    margin-top: 1em;
}

#author{
    font-size: 2.2em;
    font-family: cursive;
    color: #46b8ff;
}

.blue{
    color: #34abd3;
}

.red{
    color: #ff0000;
}

.about-me, #animate, .echo{
    font-family: "Consolas regular";
}

#animate, .echo{
    color: #008100;
}

#animate{
    animation: blink .8s 10 none;
    -webkit-animation: blink .8s linear 10 none;
}

@keyframes blink{
    0%{border-right: none}
    90%{border-right: 2px solid #ffffffd0}
}

@-webkit-keyframes blink{
    0%{border-right: none}
    90%{border-right: 2px solid #ffffffd0}
}

.middel{
    padding: 2rem;
    min-height: 30vh;
}

.greeting{
    font-family: monospace;
    margin-bottom: 1.5rem;
    font-size: 3rem !important;
}

.hide{
    opacity: 0;
    transform: translateY(.5em);
}

.appear{
    opacity: 1;
    transform: translateY(0);
}

.middel p.greeting::first-letter{
    font-size: 6rem;
    color: #333;
}

.middel p{
    font-size: 1.2rem;
}

.showcase{
    display: flex;
}

.card{
    background-color: #fff;
    margin: 1rem;
    width: 95%;
    padding: 0.5rem;
    color: #000;
}

.card img{
    width: 100%;
    height: 80%;
    cursor:pointer;
}

.card h4{
    text-align:center;
}

.card img:hover{
    background-color: #000;
    opacity: 0.7;
}

@media (max-width: 650px){
    .showcase{
    flex-wrap: wrap;
    }
}

